Crypto data - done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
 </head>
 <body>
     <main>
-        <p id="crypto" class="crypto">Crypto</p>
+        <div id="crypto-container" class="crypto-container">
+           
+            <!-- <div id="crypto" class="crypto">
+                <img src="#" alt="${}">
+                <p id="crypto-name" class="crypto-name">Crypto</p>
+            </div>
+            <div class="crypto-info">
+                <p>0,3892823</p>
+                <p>0,3892823</p>
+                <p>0,3892823</p>
+            </div> -->
+        </div>
+        
         <p id="weather" class="weather">Weather</p>
         <h1 id="time" class="time">TIME HERE</h1>
         <p id="img-author" class="img-author">By: Author</p>
