Complete project with final functionality and design

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,28 +8,29 @@
     <link rel="stylesheet" href="./index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
     <main>
         <div id="crypto-container" class="crypto-container">
-           
-            <!-- <div id="crypto" class="crypto">
-                <img src="#" alt="${}">
-                <p id="crypto-name" class="crypto-name">Crypto</p>
-            </div>
-            <div class="crypto-info">
-                <p>0,3892823</p>
-                <p>0,3892823</p>
-                <p>0,3892823</p>
-            </div> -->
+            <!-- Crypto data here -->
         </div>
-        
-        <p id="weather" class="weather">Weather</p>
+
+
+        <div id="weather" class="weather">
+            <div id="weather-top" class="weather-top">
+                <img id="weather-icon" class="weather-icon" src="">
+                <p id="temperature" class="temperature">TEMP HERE</p>
+            </div>
+            <p id="city" class="city">CITY HERE</p>
+        </div>
         <h1 id="time" class="time">TIME HERE</h1>
-        <p id="img-author" class="img-author">By: Author</p>
+        <p id="img-author" class="img-author">BY: AUTHOR</p>
     </main>
     <script src="./index.js"></script>
 </body>
+
 </html>
